[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/Button_font_92.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/buttonHover.png" type="Texture" id=4]
[ext_resource path="res://src/Game/UI.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/panel.png" type="Texture" id=6]
[ext_resource path="res://assets/Fonts/Lemon Days.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Game_camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -2357, -870 )
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="TextureRect" type="TextureRect" parent="UI/CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -840.0
margin_top = -750.0
margin_right = -90.0
margin_bottom = 750.0
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -275.0
margin_top = 150.0
margin_right = 275.0
margin_bottom = 1287.0

[node name="Title" type="Label" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
margin_right = 550.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 2 )
text = "Sokoban"
align = 1

[node name="Level" type="Label" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 125.0
margin_right = 550.0
margin_bottom = 246.0
custom_fonts/font = ExtResource( 2 )
text = "Level: 1"
align = 1

[node name="HSeparator" type="HSeparator" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 250.0
margin_right = 550.0
margin_bottom = 350.0
custom_constants/separation = 100

[node name="Time" type="Label" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 354.0
margin_right = 550.0
margin_bottom = 475.0
custom_fonts/font = ExtResource( 2 )
text = "Time: 0"
align = 1

[node name="Score" type="Label" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 479.0
margin_right = 550.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"
align = 1

[node name="HSeparator2" type="HSeparator" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 604.0
margin_right = 550.0
margin_bottom = 654.0
custom_constants/separation = 50

[node name="Moves" type="Label" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 658.0
margin_right = 550.0
margin_bottom = 752.0
custom_fonts/font = SubResource( 1 )
text = "Moves: 999"
align = 1

[node name="Pushes" type="Label" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 756.0
margin_right = 550.0
margin_bottom = 850.0
custom_fonts/font = SubResource( 1 )
text = "Pushes: 999"
align = 1

[node name="HSeparator3" type="HSeparator" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
self_modulate = Color( 0, 0, 0, 0 )
margin_top = 854.0
margin_right = 550.0
margin_bottom = 1054.0
custom_constants/separation = 200

[node name="Menu_button" type="TextureButton" parent="UI/CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 1058.0
margin_right = 550.0
margin_bottom = 1233.0
rect_min_size = Vector2( 550, 130 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="UI/CanvasLayer/TextureRect/VBoxContainer/Menu_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -60.5
margin_right = 120.5
margin_bottom = 60.5
custom_fonts/font = ExtResource( 2 )
text = "menu"

[node name="LevelFinish" type="TextureRect" parent="UI/CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -750.0
margin_right = 375.0
margin_bottom = 750.0
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/LevelFinish"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -568.0
margin_right = 360.0
margin_bottom = 130.0

[node name="Title" type="Label" parent="UI/CanvasLayer/LevelFinish/VBoxContainer"]
margin_right = 720.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "Level complete!"
align = 1

[node name="HSeparator" type="HSeparator" parent="UI/CanvasLayer/LevelFinish/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 98.0
margin_right = 720.0
margin_bottom = 198.0
custom_constants/separation = 100

[node name="Time" type="Label" parent="UI/CanvasLayer/LevelFinish/VBoxContainer"]
margin_top = 202.0
margin_right = 720.0
margin_bottom = 323.0
custom_fonts/font = ExtResource( 2 )
text = "Time: 0"
align = 1

[node name="Score" type="Label" parent="UI/CanvasLayer/LevelFinish/VBoxContainer"]
margin_top = 327.0
margin_right = 720.0
margin_bottom = 448.0
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"
align = 1

[node name="HSeparator2" type="HSeparator" parent="UI/CanvasLayer/LevelFinish/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 452.0
margin_right = 720.0
margin_bottom = 502.0
custom_constants/separation = 50

[node name="Moves" type="Label" parent="UI/CanvasLayer/LevelFinish/VBoxContainer"]
margin_top = 506.0
margin_right = 720.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "Moves: 999"
align = 1

[node name="Pushes" type="Label" parent="UI/CanvasLayer/LevelFinish/VBoxContainer"]
margin_top = 604.0
margin_right = 720.0
margin_bottom = 698.0
custom_fonts/font = SubResource( 1 )
text = "Pushes: 999"
align = 1

[node name="Next_button" type="TextureButton" parent="UI/CanvasLayer/LevelFinish"]
margin_left = 100.0
margin_top = 990.0
margin_right = 650.0
margin_bottom = 1165.0
rect_min_size = Vector2( 550, 130 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="UI/CanvasLayer/LevelFinish/Next_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.5
margin_top = -60.5
margin_right = 246.5
margin_bottom = 60.5
custom_fonts/font = ExtResource( 2 )
text = "next level"

[node name="Retry_button" type="TextureButton" parent="UI/CanvasLayer/LevelFinish"]
margin_left = 100.0
margin_top = 1208.0
margin_right = 650.0
margin_bottom = 1383.0
rect_min_size = Vector2( 550, 130 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="UI/CanvasLayer/LevelFinish/Retry_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -60.5
margin_right = 120.5
margin_bottom = 60.5
custom_fonts/font = ExtResource( 2 )
text = "Retry"

[node name="Menu_button2" type="TextureButton" parent="UI/CanvasLayer/LevelFinish"]
margin_left = 100.0
margin_top = 990.0
margin_right = 650.0
margin_bottom = 1165.0
rect_min_size = Vector2( 550, 130 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="UI/CanvasLayer/LevelFinish/Menu_button2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -60.5
margin_right = 120.5
margin_bottom = 60.5
custom_fonts/font = ExtResource( 2 )
text = "Menu"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="UI/CanvasLayer/TextureRect/VBoxContainer/Menu_button" to="." method="_on_Menu_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/LevelFinish/Next_button" to="." method="_on_Next_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/LevelFinish/Retry_button" to="." method="_on_Retry_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/LevelFinish/Menu_button2" to="." method="_on_Menu_button_pressed"]
[connection signal="timeout" from="Timer" to="UI" method="_on_Timer_timeout"]
